# comrade

./: .gitignore  AUDIT.md  Cargo.toml  README.md  RELEASING.md  deny.toml
.github/workflows/: android-apk.yml  auto-release.yml  ci.yml  release.yml
android/: debug.keystore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/global/auros/comrade/: DeviceSmokeTest.kt
android/app/src/androidTest/java/mullu/comrade/: DeviceSmokeTest.kt  MainActivityUiTest.kt  TwoPeerJniIntegrationTest.kt
android/app/src/androidTest/java/mullu/comrade/call/: CallManagerDeadlockRegressionTest.kt  CallManagerLifecycleTest.kt  CallServiceContractTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: README.md
android/app/src/main/java/global/auros/comrade/: ComradeCore.kt  MainActivity.kt
android/app/src/main/java/global/auros/comrade/ui/theme/: Theme.kt
android/app/src/main/java/global/auros/comrade/voice/: CommandDispatcher.kt  ComradeCoreBackend.kt  ComradeInteractionService.kt  ComradeInteractionSession.kt  ComradeInteractionSessionService.kt  ComradeRecognitionService.kt  ComradeTts.kt  OneShotRecognizer.kt  VoiceCommand.kt  VoskModel.kt  WakeWordService.kt
android/app/src/main/java/mullu/comrade/: CallActionReceiver.kt  CallRelayDefaults.kt  ComradeApplication.kt  ComradeCore.kt  MainActivity.kt  MeshStatusMonitor.kt  Notifier.kt  RelayConnectionService.kt
android/app/src/main/java/mullu/comrade/call/: AudioRoute.kt  CallManager.kt  CallQuality.kt  CallScreen.kt  CallService.kt  CallUiState.kt  Ringer.kt
android/app/src/main/java/mullu/comrade/media/: VoiceRecorder.kt
android/app/src/main/java/mullu/comrade/ui/: AppIcons.kt  CallHistoryScreen.kt  CallScreen.kt  ChatThread.kt  ChatsScreen.kt  DisplayName.kt  FeedScreen.kt  JournalScreen.kt  MediaAttachment.kt  OnboardingScreen.kt  SettingsScreen.kt  TaraScreen.kt  VoiceModelDownloadDialog.kt
android/app/src/main/java/mullu/comrade/ui/theme/: Theme.kt
android/app/src/main/java/mullu/comrade/voice/: CommandDispatcher.kt  ComradeCoreBackend.kt  ComradeInteractionService.kt  ComradeInteractionSession.kt  ComradeInteractionSessionService.kt  ComradeRecognitionService.kt  ComradeTts.kt  OneShotRecognizer.kt  VoiceCommand.kt  VoiceModelDownloader.kt  VoiceModelInstaller.kt  VoskModel.kt  WakeWordService.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml  interaction_service.xml  recognition_service.xml
android/app/src/test/java/global/auros/comrade/voice/: CommandDispatcherTest.kt  VoiceCommandTest.kt
android/app/src/test/java/mullu/comrade/: NotifierTest.kt
android/app/src/test/java/mullu/comrade/call/: CallManagerTest.kt
android/app/src/test/java/mullu/comrade/ui/: ChatThreadTest.kt  DisplayNameTest.kt  OnboardingScreenTest.kt
android/app/src/test/java/mullu/comrade/voice/: CommandDispatcherTest.kt  VoiceCommandTest.kt  VoiceModelInstallerTest.kt  VoskModelTest.kt  WakeWordServiceTest.kt
crates/comrade_core/: Cargo.toml
crates/comrade_core/src/: call.rs  companion.rs  crypto.rs  dm.rs  error.rs  lib.rs  media.rs  pukar.rs  relay.rs  saathi.rs  sabha.rs  sakha.rs  tara.rs  vault.rs
crates/comrade_jni/: Cargo.toml
crates/comrade_jni/src/: lib.rs
crates/comrade_py/: Cargo.toml  README.md  pyproject.toml
crates/comrade_py/src/: lib.rs
crates/comrade_state/: Cargo.toml
crates/comrade_state/src/: lib.rs
crates/comrade_storage/: Cargo.toml
crates/comrade_storage/src/: error.rs  lib.rs  migrate.rs  repository.rs
crates/comrade_storage/tests/: durability.rs
crates/comrade_ui/: Cargo.toml
crates/comrade_ui/src/: lib.rs  runtime.rs
crates/comrade_ui/tests/: feed_flood_load.rs  two_peer_integration.rs
crates/comrade_ui/tests/support/: mod.rs
crates/comrade_uniffi_bindgen/: Cargo.toml
deploy/coturn/: README.md  docker-compose.yml  turnserver.conf
deploy/test-relay/: README.md  config.toml  docker-compose.yml
desktop/: .gitignore  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
desktop/ui/: call_decisions.mjs  call_decisions.test.mjs  index.html  main.js  media_params.mjs  media_params.test.mjs  styles.css
docs/: COMMS_ARCHITECTURE.md  TARA.md  calling-roadmap.md
scripts/: fetch-vosk-model.sh
src/: main.rs
