[workspace]
members = [
    ".",
    "crates/comrade_core",
    "crates/comrade_jni",
    "crates/comrade_state",
]
resolver = "2"

[workspace.dependencies]
tokio          = { version = "1",     features = ["full"] }
nostr-sdk      = { version = "0.44", features = ["nip04"] }
libp2p         = { version = "0.56",  features = ["tokio", "tcp", "noise", "yamux", "mdns", "gossipsub", "macros"] }
yrs            = "0.21"
serde          = { version = "1",     features = ["derive"] }
serde_json     = "1"
regex          = "1"
thiserror      = "2"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm        = "0.10"
rand           = "0.8"
sha2           = "0.10"
hkdf           = "0.12"
base64         = "0.22"
secp256k1      = { version = "0.29",  features = ["hashes", "rand-std"] }
hex            = "0.4"
anyhow         = "1"
jni            = { version = "0.21",  features = ["invocation"] }

# ── Root binary ─────────────────────────────────────────────────────────────
[package]
name    = "comrade"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "comrade"
path = "src/main.rs"

[dependencies]
comrade_core  = { path = "crates/comrade_core" }
comrade_state = { path = "crates/comrade_state" }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
nostr-sdk          = { workspace = true }
