[package]
name    = "comrade_core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
comrade_state = { path = "../comrade_state" }

tokio         = { workspace = true }
nostr-sdk     = { workspace = true }
libp2p        = { workspace = true }
yrs           = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
regex         = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
aes-gcm       = { workspace = true }
rand          = { workspace = true }
sha2          = { workspace = true }
hkdf          = { workspace = true }
base64        = { workspace = true }
secp256k1     = { workspace = true }
hex           = { workspace = true }

# Optional: real HTTP uploader for NIP-96 file storage. Off by default so the
# core stays lean and CI does not build a TLS/HTTP stack; enable with
# `--features nip96-http`.
reqwest       = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json"], optional = true }

[features]
default = []
nip96-http = ["dep:reqwest"]
