[package]
name    = "comrade_jni"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# cdylib = shared library (.so) loaded at runtime by the Android JVM — via
# uniffi's generated JNA bindings, not a hand-written `System.loadLibrary` +
# `external fun` pairing (see `uniffi::setup_scaffolding!` in lib.rs).
crate-type = ["cdylib"]

[dependencies]
comrade_core  = { path = "../comrade_core" }
comrade_state = { path = "../comrade_state" }
comrade_ui    = { path = "../comrade_ui" }
uniffi        = { workspace = true }
# `CallSignal`'s wire form on the Vault DM channel is still a JSON string
# (comrade_ui::ComradeRuntime::send_call_signal takes `signal_json: &str`);
# this crate accepts the typed enum from Kotlin and encodes it once here.
serde_json    = { workspace = true }
# A multi-thread Tokio runtime is no longer owned here: `async_runtime =
# "tokio"` (see lib.rs) hands each async export to `async-compat`, which
# lazily drives it on a runtime of its own the first time it's polled.
tokio         = { workspace = true }

[features]
default = []
# Turn on the real HTTP media pipeline (Blossom upload + fetch-and-decrypt) so
# the Android build can actually send/receive attachments. The APK workflows
# pass `--features media-http`; the lean workspace test build leaves it off.
media-http = ["comrade_ui/media-http"]

[dev-dependencies]
tempfile = { workspace = true }
