[package]
name    = "comrade_ui"
version = "0.1.0"
edition = "2021"
publish = false

# Framework-agnostic view-model / service layer shared by every frontend
# (Tauri desktop, Slint/Iced native, Android via JNI). Holds no rendering code.

[dependencies]
comrade_core    = { path = "../comrade_core" }
comrade_state   = { path = "../comrade_state" }
comrade_storage = { path = "../comrade_storage" }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
# The async runtime + Nostr types are needed by the `runtime` module (the IPC
# bridge orchestrator). They were already transitively present via comrade_core;
# declaring them here lets the bridge own its engines and event bus directly.
tokio      = { workspace = true }
nostr-sdk  = { workspace = true }
base64     = { workspace = true }
# Record/Enum/Error derives on this crate's DTOs, `BridgeEvent`, and `UiError`
# — the shared FFI contract every frontend (Tauri, uniffi/Android) is built
# from. Deriving here (not duplicating types in comrade_jni) keeps one
# source of truth as the data model grows.
uniffi     = { workspace = true }

[features]
default = []
# Enable the real HTTP media pipeline (Blossom upload + fetch-and-decrypt) in
# the underlying core. Frontends that ship media (e.g. the Tauri desktop) turn
# this on; the workspace test build leaves it off and exercises the offline path.
media-http = ["comrade_core/media-http"]

[dev-dependencies]
tempfile = { workspace = true }
# In-process test relay (tests/support) for the two-peer integration suite.
tokio-tungstenite = { workspace = true }
futures-util      = { workspace = true }
