[package]
name    = "comrade-desktop"
version = "0.1.0"
edition = "2021"
description = "Comrade cross-platform desktop shell (Tauri 2)"

# This crate is intentionally OUTSIDE the main Cargo workspace (see root
# Cargo.toml `exclude`) because Tauri needs the Tauri CLI + system webview
# libraries (e.g. webkit2gtk on Linux) which are not part of the headless CI
# image. The empty `[workspace]` table below makes it its own workspace root so
# `cargo tauri dev`/`cargo check` resolve correctly from this directory.
[workspace]

[lib]
name = "comrade_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Mirrors the root workspace's release profile (this crate is its own workspace
# root, so it does not inherit it): faster-loading, smaller shipped binaries.
# No `panic = "abort"` — comrade_ui is shared with the JNI bridge, which relies
# on unwinding for its FFI panic guard.
[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "debuginfo"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# media-http turns on the real Blossom upload + fetch-and-decrypt pipeline.
comrade_ui = { path = "../../crates/comrade_ui", features = ["media-http"] }
# Shared multi-thread runtime + async sync/fs primitives the bridge state uses.
tokio      = { version = "1", features = ["sync", "rt-multi-thread", "macros", "fs"] }
tracing    = "0.1"
base64     = "0.22"
